Closed Bug 169760 Opened 23 years ago Closed 23 years ago

Keychain should not replace server-supplied field contents

Categories

(Camino Graveyard :: HTML Form Controls, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: martin, Assigned: mikepinkerton)

Details

Attachments

(2 files)

If you tell Chimera to remember, say a value from a login-procedure (where there's a field named 'username') - the next time Chimera sees an inputfield with the same name, it displays the previously entered value, even if that fields value is preset from the server. Its weird, becourse if you look at the html-source, the right value is there (in this case: "<input type="text" name="username" size="25" value="martin" disabled>"), but the browser displays something else, in this case "root", since it remembers that from some db-frontend.
Martin, what build ID are you reporting this bug against?
Summary: inputfields insists on remembering previously entered data → inputfields insists on remembering previously entered data
Ver. 0.5 - build 2002091804
Confirming
Assignee: bryner → pinkerton
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: inputfields insists on remembering previously entered data → Keychain should not replace server-supplied field contents
would the correct thing here to be to not pre-fill any field with a value attribute? or would that lead to disaster?
Attached file testcase
Attached file test2
test2
so i fixed it to prefill the password only if the value attribute of the username field matches what we have stored in the keychain. if they don't match, keep the server supplied value and do nothing with the password field. the two tests above test this behavior (obviously replace test2 with your bugzilla username and have a bugzilla password stored in keychain). fixed.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
QA Contact: winnie → petersen
Verified in the 2003-01-11-04 NB under 10.2.3. Confirming that if the username value matches the keychain, the password field is pre filled automatically. If the user name isn't the same, then the password field remains blank.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: