if the server supplies a value for the username, only autofill if the supplied value matches what is stored in the keychain, otherwise leave the password field blank (bug 169760)